# crazy_cars

./: .gitignore  1261032_1261052.sln  CMakeLists.txt  Makefile  README.md  banner.cpp  banner.h  car.cpp  crazy_cars.cpp  crazy_cars.drawio  win.h
The_Final_Lap/: Bonus.cpp  Bonus.h  Bugatti.cpp  Bugatti.h  Car.cpp  Car.h  Control.cpp  Control.h  F1.cpp  F1.h  Lambor.h  Obstacle.cpp  Obstacle.h  Racing.cpp  Racing.h  Rocket.h  Score.cpp  Score.h  The_Final_Lap.aps  The_Final_Lap.vcxproj  The_Final_Lap.vcxproj.filters  main.cpp  resource.h
src/: Bonus.cpp  Bonus.h  Bugatti.cpp  Bugatti.h  Car.cpp  Car.h  Console.h  Control.h  F1.cpp  F1.h  Lambor.cpp  Lambor.h  NCursesConsole.cpp  NCursesConsole.h  Obstacle.cpp  Obstacle.h  Racing.cpp  Racing.h  Rocket.h  Score.cpp  Score.h  main.cpp  records.txt
